[package]
name = "browser-window"
version = "0.7.0"
description = "A simple async/await aware browser (GUI) toolkit."
edition = "2018"
authors = ["Danny de Jong"]
license = "MIT"
publish = true
keywords = ["browser", "chromium", "electron", "gui", "webview"]
categories = ["asynchronous", "gui", "web-programming"]
readme = "README.md"
documentation = "https://docs.rs/browser-window/"
repository = "https://github.com/bamidev/browser-window/"

[features]
default = ["cef"]
cef = ["browser-window-core/cef"]
gtk = ["browser-window-core/gtk"]
threadsafe = []

[lib]
name = "browser_window"
path = "src/lib.rs"

[[example]]
name = "terminal"
path = "examples/terminal.rs"

[[example]]
name = "authentication"
path = "examples/authentication.rs"

[dependencies]
browser-window-core = { path = "./core", version = "0.2.0", features = [ "cef" ] }
futures-channel = { version = "^0.3" }
lazy_static = "1"
unsafe-send-sync = "^0.1"

[dev-dependencies]
serde_json = "^1.0"
tokio = { version = "^1.0", features = ["rt", "rt-multi-thread"] }

[package.metadata.docs.rs]
features = ["threadsafe"]

[workspace]
members = ["c", "core"]
