[package]
name = "browser-window"
version = "0.10.0"
description = "A simple, async/await aware browser window."
edition = "2018"
authors = ["Bamidev"]
license = "MIT"
publish = true
keywords = ["browser", "chromium", "electron", "gui", "webview"]
categories = ["asynchronous", "gui", "web-programming"]
readme = "README.md"
documentation = "https://docs.rs/browser-window/"
repository = "https://github.com/bamidev/browser-window/"

[features]
bundled = ["browser-window-c/bundled"]
cef = ["browser-window-c/cef"]
edge = ["browser-window-c/edge"]
gtk = []
webkitgtk = ["dep:gtk", "dep:javascriptcore-rs", "dep:webkit2gtk", "gtk"]
threadsafe = []

[lib]
name = "browser_window"
path = "src/lib.rs"

[[example]]
name = "terminal"
path = "examples/terminal.rs"

[[example]]
name = "authentication"
path = "examples/authentication.rs"

[dependencies]
browser-window-c = { path = "c", version = "0.1.0" }
futures-channel = { version = "^0.3" }
gtk = { version = "0.18", optional = true }
javascriptcore-rs = { version = "1", optional = true }
lazy_static = "1"
num-bigfloat = "1"
unsafe-send-sync = "^0.1"
webkit2gtk = { version = "2.0", optional = true, features = ["v2_40"] }


[dev-dependencies]
serde_json = "^1.0"
tokio = { version = "^1.0", features = ["rt", "rt-multi-thread"] }

[package.metadata.docs.rs]
features = ["threadsafe"]

[workspace]
members = ["c"]
