[package]
name = "browser-window"
version = "0.12.3"
description = "A simple, optionally async, optionally threadsafe, electron-like browser toolkit for Rust."
edition = "2018"
authors = ["Bamidev"]
license = "MIT"
publish = true
keywords = ["browser", "chromium", "electron", "gui", "webview"]
categories = ["asynchronous", "gui", "web-programming"]
readme = "README.md"
documentation = "https://docs.rs/browser-window/"
repository = "https://github.com/bamidev/browser-window/"

[features]
cef = ["browser-window-c/cef"]
edge2 = ["dep:webview2", "dep:winapi", "browser-window-c/edge2"]
gtk = []
webkitgtk = ["dep:glib", "dep:gtk", "dep:javascriptcore-rs", "dep:webkit2gtk", "gtk"]
threadsafe = []

[lib]
name = "browser_window"
path = "src/lib.rs"

[[example]]
name = "terminal"
path = "examples/terminal.rs"

[[example]]
name = "authentication"
path = "examples/authentication.rs"

[dependencies]
browser-window-c = { path = "c", version = "=0.3.2" }
futures-channel = { version = "^0.3" }
glib = { version = "0.18", optional = true }
gtk = { version = "0.18", optional = true }
javascriptcore-rs = { version = "1", optional = true }
json = "0.12"
lazy_static = "1"
num-bigfloat = "1"
unsafe-send-sync = "^0.1"
webkit2gtk = { version = "2.0", optional = true, features = ["v2_40"] }
webview2 = { version = "0.1", optional = true }
winapi = { version = "0.3", optional = true }


[dev-dependencies]
serde_json = "^1.0"
tokio = { version = "^1.0", features = ["rt", "rt-multi-thread"] }

[package.metadata.docs.rs]
features = ["threadsafe"]

[workspace]
members = ["c"]
