[package]
name = "browser-window-c"
version = "0.0.10"
description = "FFI bindings for the browser-window crate."
edition = "2018"
authors = ["Danny de Jong"]
license = "MIT"
publish = true
categories = []
repository = "https://github.com/bamilab/browser-window/tree/master/c"

[features]
default = ["cef"]
cef = []
gtk = []

[lib]
name = "browser_window_c"
path = "src/lib.rs"
crate-type = ["rlib"]

[build-dependencies]
bindgen = "^0.55"
cc = "^1.0"
pkg-config = "^0.3"
