[package]
name = "browser-window-c"
version = "0.0.12"
description = "FFI bindings for the browser-window crate."
edition = "2018"
authors = ["Bamidev"]
license = "MIT"
publish = true
categories = []
repository = "https://github.com/bamilab/browser-window/tree/master/c"

[features]
cef = []
edge = []

[lib]
name = "browser_window_c"
path = "src/lib.rs"
crate-type = ["rlib"]

[build-dependencies]
bindgen = "^0.69"
cc = "^1.0"
pkg-config = "^0.3"
