[package]
name = "browser-window-c"
version = "0.3.2"
description = "Browser framework functionality for BrowserWindow written in C/C++."
edition = "2018"
authors = ["Bamidev"]
license = "MIT"
publish = true
categories = []
repository = "https://github.com/bamilab/browser-window/tree/master/c"

[features]
cef = []
edge2 = []

[lib]
name = "browser_window_c"
path = "src/lib.rs"
crate-type = ["rlib"]

[build-dependencies]
bindgen = "^0.69"
cc = "^1.0"
pkg-config = "^0.3"
