[package]
name = "browser-window-example"
version = "0.0.0"
description = "A simple example that demonstrates how you can use browser windows asynchronously."
edition = "2018"
publish = false

[features]
cef = ["browser-window/cef"]
gtk = ["browser-window/gtk"]

[dependencies]
browser-window = { path = "..", features = ["cef"] }
serde_json = "1.0"
