[package]
name = "browser-window-ffi"
version = "0.4.1"
description = "FFI bindings for the browser-window crate."
edition = "2018"
authors = ["Danny de Jong"]
license = "MIT"
publish = true
categories = ["api-bindings"]
repository = "https://github.com/bamilab/browser-window/tree/master/ffi"

[lib]
name = "browser_window_ffi"
path = "src/lib.rs"
crate-type = ["rlib"]

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"

[package.metadata.docs.rs]
all-features = true
default_target = "x86_64-pc-windows-msvc"
