[package]
name = "browser-window-ffi"
version = "0.4.1"
description = "FFI bindings for the C code base of BrowserWindow, found in crate browser-window-c."
edition = "2018"
authors = ["Danny de Jong"]
license = "MIT"
publish = true
categories = ["api-bindings"]
repository = "https://github.com/bamilab/browser-window/tree/master/ffi"

[features]
cef = ["browser-window-c/cef"]

[lib]
name = "browser_window_ffi"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
browser-window-c = { path = "../c" }

[build-dependencies]
bindgen = "^0.55"
cc = "^1.0"
pkg-config = "^0.3"
